New buttons for printing routine labels per category. Round label checked by default for champs. Updated order of routines.